[gd_scene load_steps=2 format=2]

[ext_resource path="res://demo/journal/journal.gd" type="Script" id=1]

[node name="Control" type="Control"]
rect_min_size = Vector2( 800, 600 )
rect_rotation = 0.183497
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="CenterContainer"]
margin_right = 800.0
margin_bottom = 600.0
rect_min_size = Vector2( 800, 600 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="Label" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
margin_right = 780.0
margin_bottom = 14.0
text = "Quest Journal"
align = 1
uppercase = true

[node name="HSplitContainer" type="HSplitContainer" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 18.0
margin_right = 780.0
margin_bottom = 580.0
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="CenterContainer/Panel/VBoxContainer/HSplitContainer"]
margin_right = 384.0
margin_bottom = 562.0
size_flags_horizontal = 3

[node name="QuestList" type="VBoxContainer" parent="CenterContainer/Panel/VBoxContainer/HSplitContainer/ScrollContainer"]

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel/VBoxContainer/HSplitContainer"]
margin_left = 396.0
margin_right = 780.0
margin_bottom = 562.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/Panel/VBoxContainer/HSplitContainer/VBoxContainer"]
margin_right = 384.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="CenterContainer/Panel/VBoxContainer/HSplitContainer/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 47.0
margin_bottom = 19.0
text = "Quest: "

[node name="QuestTitle" type="LineEdit" parent="CenterContainer/Panel/VBoxContainer/HSplitContainer/VBoxContainer/HBoxContainer"]
margin_left = 51.0
margin_right = 384.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="CenterContainer/Panel/VBoxContainer/HSplitContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 384.0
margin_bottom = 42.0
text = "Description"

[node name="QuestDescription" type="TextEdit" parent="CenterContainer/Panel/VBoxContainer/HSplitContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 384.0
margin_bottom = 96.0
rect_min_size = Vector2( 0, 50 )
readonly = true
